# djangoproject

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Readme(HW_1).rtf  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  readme(HM-3).txt
.github/workflows/: ci.yaml  cicd.yaml
fixtures/: datadump.json  posts.json
src/django_project/: __init__.py  db.sqlite3
src/django_project/blog_app/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
src/django_project/blog_app/migrations/: 0001_initial.py  0002_rename_slag_category_slug_rename_slag_post_slug.py  0003_post_key_1_post_views_count.py  0003_post_topic_post_views_count.py  0004_alter_category_options_alter_post_options_and_more.py  0004_alter_post_views_count.py  0005_alter_post_views_count.py  0005_post_image.py  0006_alter_post_key_1.py  0006_alter_post_topic.py  0007_enable_pg_trgm.py  0008_post_post_title_content_gin.py  0009_remove_post_post_title_content_gin_and_more.py  0009_remove_post_post_title_content_gin_post_topic_title_and_more.py
src/django_project/blog_app/tests/: test_auth.py  tests_forms.py  (+2 more)
src/django_project/blog_project/: settings.py  urls.py
src/django_project/drf_api/: apps.py  permissions.py  serializers.py  urls.py  views.py
src/django_project/feedback_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/django_project/ninja_api/: apps.py  auth_routes.py  routes.py  schemas.py
src/django_project/templates/: base.html
src/django_project/users/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
(+43 files in other folders)
