[project]
name = "django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0",
    "django-filter>=25.2",
    "django-jazzmin>=3.0.2",
    "django-ninja>=1.5.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.8",
    "email-validator>=2.3.0",
    "pillow>=12.1.1",
    "pre-commit>=4.5.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
django-project = "django_project:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
